// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CategoryFilter renders Filter when categories exist but filter does not 1`] = `
<div>
  <div
    class="dropdown"
    data-test-id="filter-dropdown"
  >
    <button
      aria-expanded="false"
      aria-haspopup="true"
      class="dropdown-toggle btn btn-light"
      id="filter-by-category-button"
      type="button"
    >
      Filter by category
    </button>
  </div>
</div>
`;

exports[`CategoryFilter renders Filtered when categories and filter exist 1`] = `
<div>
  <span
    id="filter-title"
  >
    Filtering by:
  </span>
  <button
    class="btn btn-outline-primary"
    data-test-id="clear-filter"
    id="filter-button"
    type="button"
  >
    foo
     
    <i
      class="fa fa-trash"
    />
  </button>
</div>
`;

exports[`CategoryFilter renders NoFilter when categories do not exist 1`] = `
<div>
  <button
    class="btn btn-light"
    disabled=""
    id="no-filter"
    type="button"
  >
    Filter by category
  </button>
</div>
`;
